	  KEY_MOUSE. (DLR)
	- Improve the handling of NANO_REFRESH_KEY. (DLR)
  total_statusbar_refresh()
	- New function, called when we get NANO_REFRESH_KEY in
	  do_statusbar_input(). (DLR)
  do_yesno_prompt()
	- Handle the keys in a switch statement instead of a long if
	  block, for simplicity. (DLR)
- rcfile.c:
  parse_argument()
	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
  parse_syntax()
	- Don't generate an error if we find a duplicate syntax name,
	  since we might be trying to override a syntax in the global
	  nanorc with one in our local nanorc.  Instead, free any
	  duplicate syntaxes we find, so that we always use the last
	  syntax with a given name. (DLR)
  parse_colors()
	- Check for a color command's not following a syntax line before
	  anything else. (DLR)
  parse_rcfile()
	- Properly generate an error if we've read in a syntax without
	  any associated color commands. (DLR)
	- Change variable i from an int to a size_t, for consistency.
	  (DLR)
	- Properly handle rcfiles that don't end in newlines. (DLR)
  do_rcfile()
	- Check for the rcfile's being a directory or device file and
	  reject it if it is, for consistency with file handling
	  elsewhere. (DLR)
	- Remove SYSCONFDIR #ifdef, as SYSCONFDIR should always be set.
	  (DLR)
	- Change all rcfile error messages to refer to commands instead
	  of directives, for consistency with nanorc.5. (DLR)
- text.c:
  break_line()
	- Fix problem where tab widths in columns would always be
	  calculated as tabsize. (DLR, found by Alexey Toptygin)
	- Handle newlines consistently when searching for the last blank
	  in the first group of blanks in the range of (goal - 1). (DLR,
	  found by Benno Schulenberg)
  do_justify()
	- Remove redundant key checks. (DLR)
  do_spell()
	- Clarify the error message when creating a temporary file
	  fails. (DLR)
  do_verbatim_input()
	- Add a translator comment explaining the "Verbatim Input"
	  statusbar message. (Benno Schulenberg)